@@ -156,7 +156,7 @@ k.settings.server.ADDRESS = "ws://kipdola.be";
  * What's our target FPS?
  * @define {integer}
  */
-k.settings.engine.fps = 50;
+k.settings.engine.fps = 25;
 
 /**
  * The default background color to draw on the canvas
