@@ -1,6 +1,11 @@
 --- Wednesday 2012-06-27 ---
 * Added inner sector coordinates to the coordinate functions
 * Added new dirtyness functions, seems to be working.
+* Added some extra debug functions, added sector dirtyness and cleaned it up a
+  bit.
+* Started a whole new mess by redesigning drawTile and drawTileSpecific
+* Map-animations work again. Tiles that shouldn't be drawn aren't.
+
 
 --- Tuesday 2012-06-26 ---
 * The map is now rendered in the correct place, sectors work perfectly.
